css/base.css
html,
body,
.fullheght {
  height: 100%;
}
body {
  display: flex;
  flex-direction: column;
}

.add-todo {
  font-size: 36px;
  position: fixed;
  left: 30px;
  bottom: 30px;
  height: 68px;
  width: 68px;
}

.circle {
  border-radius: 50%;
}
.topp-z {
  z-index: 999;
}

.padding-0 {
  padding-right: 0;
  padding-left: 0;
}

.padding-right-0 {
  padding-right: 0;
}

.padding-left-0 {
  padding-left: 0;
}

.margin-right-0 {
  margin-right: 0;
}

.min-high-0 {
  min-height: 0;
}
.flex-colum-100{
  display: flex;
  flex-direction: column;
  height: 100%;
}

.daycontaner {
  font-size: 0.8rem;
  color: black;
  background-color: whitesmoke;
  border: solid 1px black;
  min-height: 4rem;
  overflow: hidden;
  word-wrap: break-word;
}
.selected {
  border: solid 1px red;
}

.red .day-Nr,
.red .day-red-day {
  color: red;
}
.day-Nr {
  font-size: 1.3rem;
}
.todo-nr {
  background-color: cadetblue;
  height: 1.3rem;
  width: 1.3rem;
}

.temp {
  display: none;
}

.row-cols-7 > * {
  flex: 0 0 auto;
  width: 14.28571428571429%;
}

.todobuttons {
  height: auto;
  align-items: center;
}

